[package]
name = "agent-bridle-tool-shell"
# argv + safe-subset engine (ADR 0005): agent-bridle is the exec funnel — it
# parses the request itself, checks the exec/fs leash, spawns directly, and
# refuses the dynamic constructs by design. L2 convenience; the L3 boundary is
# deferred (agent-bridle#35) so runs are honestly advisory (sandbox_kind=None).
# Incremental build tracked on agent-bridle#34; brush-bridle-core is the
# deferred, reversible full-bash alternative engine (ADR 0005 D4, #20).
description = "Capability-confined shell tool for agent-bridle (argv + safe-subset engine)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# The live egress-audit monitor (#124, ADR 0016). Needs the `shell` feature (for
# the `NetAuditEvent` type it renders), so it is not built in a `shell`-less build.
[[bin]]
name = "bridle-netmon"
required-features = ["shell"]

# A dispatch-capable host binary for the carried-coreutils integration test
# (issue #206): its `main` calls `maybe_dispatch()` first, so the brush engine's
# coreutils shims (which re-exec `<self> --invoke-bundled <name>`) resolve
# in-process against THIS binary — proving carried `ls`/`cat` work with no host
# tools. Only built with `carried-coreutils`.
[[bin]]
name = "dispatch_host"
required-features = ["carried-coreutils"]

[features]
# `shell` is on by default so agent-bridle's registry() includes the tool.
# It pulls tokio (spawn_blocking + timeout) for confined execution.
default = ["shell"]
shell = ["dep:tokio"]
# The sandboxed-host engine (ADR 0019 / #194): a second, complementary engine
# that runs `/bin/sh -c` with the whole tree inside the L3 jail (no L2 parsing).
# Opt-in; the embedder registers it instead of the safe-subset ShellTool. Pulls
# tokio (spawn_blocking) like `shell`; independent of the safe-subset modules.
host-shell = ["dep:tokio"]
# The carried **brush** engine (agent-bridle#20 / Track 2): a bash-in-Rust shell
# run in-process, confined by the `CommandInterceptor` L2 leash — the only engine
# that also confines a *restricted* exec/net grant, and cross-platform. Uses the
# temporary `brush-ocap-*` fork, published to crates.io (reubeno/brush#1184 not
# yet upstream). Off by default; the crate stays publish-clean with `brush` off.
brush = ["dep:tokio", "dep:brush-ocap-core", "dep:brush-ocap-builtins"]
# Carried coreutils (agent-bridle#20 / issue #206): the brush engine registers
# bundled uu_* coreutils shims that re-exec `<self> --invoke-bundled <name>`, so
# an embedded shell runs `ls`/`cat`/… with NO host tools — IF the host binary is
# dispatch-capable (calls `maybe_dispatch()` at the top of `main`). Off by
# default; carries the fork's published coreutils crate.
carried-coreutils = ["brush", "dep:brush-ocap-coreutils-builtins"]
# Kernel-enforced L3 backstop (Linux). The engine applies the Landlock fs_write
# ruleset before spawning when fs_write is restricted (agent-bridle#35); off this
# build/OS it is the honest advisory None (ADR 0005 / ADR 0006). Exec/net axes
# (#31/#57) and the Windows backend (#51) are follow-ups.
linux-landlock = ["agent-bridle-core/linux-landlock"]
# Kernel-enforced L3 backstop (macOS). When a filesystem axis is restricted the
# engine wraps each spawned stage in `sandbox-exec` with an SBPL profile derived
# from the caveats (agent-bridle#50, ADR 0006/0009); off this build/OS it is the
# honest advisory None. Confines fs_write + fs_read; exec/net are follow-ups.
macos-seatbelt = ["agent-bridle-core/macos-seatbelt"]
# Windows AppContainer backend marker (agent-bridle#51). Process-launch wiring
# requires a Windows CreateProcess launcher because AppContainer is a startup
# attribute, not a current-thread sandbox like Landlock.
windows-appcontainer = ["agent-bridle-core/windows-appcontainer"]
os-sandbox = ["linux-landlock", "macos-seatbelt", "windows-appcontainer"]

[dependencies]
agent-bridle-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, optional = true }

# The `brush-ocap-*` fork on crates.io (github.com/hartsock/brush @ brush-ocap):
# upstream brush + the CommandInterceptor hook (reubeno/brush#1184), renamed +
# published so this crate is crates.io-publishable with `brush` on. Temporary —
# retire once #1184 merges upstream and a hooked `brush-*` release ships
# (agent-bridle#20).
# MIN-VERSION MATTERS: the interceptor code here uses the
# `brush_core::extensions::CommandDecision` / `before_command` /
# `Error::is_terminating` API that first shipped in brush-ocap-core 0.5.1. A
# bare "0.5" lets a downstream resolver satisfy us with 0.5.0 (cargo's
# conservative update does exactly that from an old lock) → unresolved imports
# in a published crate (broke newt-agent's mesh contract job, newt-agent#1327).
# The requirement must name the API floor we compile against.
brush-ocap-core = { version = "0.5.1", optional = true }
brush-ocap-builtins = { version = "0.2", optional = true }
# A minimal carried coreutils set (ls/cat/echo) — enough for the embedded
# dispatch path (issue #206) without the ~100-crate `coreutils.all` build.
brush-ocap-coreutils-builtins = { version = "0.1", features = [
    "coreutils.ls",
    "coreutils.cat",
    "coreutils.echo",
], optional = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
