[package]
name = "agent-bridle"
description = "The capability leash for agent tools: a ready-to-use, capability-governed tool registry for the Gilamonster agent line."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../README.md"

[features]
# Shell on by default so `agent-bridle::registry()` ships a useful tool set.
# A host that wants a leaner build can opt out with --no-default-features.
default = ["shell"]
shell = ["dep:agent-bridle-tool-shell"]
# `web` adds the confined `web_fetch` tool (the `net` enforcer). Off by default
# so the heavy reqwest/readability/DNS deps only enter a build that asks for it.
web = ["dep:agent-bridle-tool-web"]
linux-landlock = [
    "agent-bridle-core/linux-landlock",
    "agent-bridle-tool-shell?/linux-landlock",
    "agent-bridle-tool-web?/linux-landlock",
]
macos-seatbelt = [
    "agent-bridle-core/macos-seatbelt",
    "agent-bridle-tool-shell?/macos-seatbelt",
    "agent-bridle-tool-web?/macos-seatbelt",
]
windows-appcontainer = [
    "agent-bridle-core/windows-appcontainer",
    "agent-bridle-tool-shell?/windows-appcontainer",
]
# One-knob convenience (ADR 0006 D2): enable every OS L3 backend. Each is inert
# off its target OS, so a build/CI matrix can turn them all on and let
# `best_available_sandbox()` pick the right one at runtime.
os-sandbox = ["linux-landlock", "macos-seatbelt", "windows-appcontainer"]

[dependencies]
agent-bridle-core = { workspace = true }
agent-bridle-tool-shell = { workspace = true, optional = true }
agent-bridle-tool-web = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
