[package]
name = "agent-bridle"
description = "The capability leash for agent tools: a ready-to-use, capability-governed tool registry for the Gilamonster agent line."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../README.md"

[features]
# Shell on by default so `agent-bridle::registry()` ships a useful tool set.
# A host that wants a leaner build can opt out with --no-default-features.
default = ["shell"]
shell = ["dep:agent-bridle-tool-shell"]
# The sandboxed-host engine (ADR 0019 / #194): exposes `HostShellTool` — full
# shell semantics with the guarantee entirely on L3. Complementary to `shell`,
# not a replacement (ADR 0019 D3), so the embedder selects it at registry
# construction; it is NOT auto-added to `registry()` (it and `ShellTool` share
# the `"shell"` name). Off by default.
host-shell = ["dep:agent-bridle-tool-shell", "agent-bridle-tool-shell/host-shell"]
# The carried brush engine (agent-bridle#20 / Track 2): exposes `BrushShellTool`,
# a bash-in-Rust shell confined in-process by the CommandInterceptor — the only
# engine that also confines a restricted exec/net grant. Complementary to `shell`
# (ADR 0005 D2 seam); the embedder selects it at registry construction. Off by
# default. Uses the temporary `brush-ocap-*` fork published to crates.io
# (agent-bridle#20); retire once reubeno/brush#1184 ships upstream.
brush = ["dep:agent-bridle-tool-shell", "agent-bridle-tool-shell/brush"]
# Carried coreutils (issue #206): the brush engine carries bundled uu_* coreutils
# so an embedded shell runs `ls`/`cat`/… with no host tools. Off by default.
carried-coreutils = ["brush", "agent-bridle-tool-shell/carried-coreutils"]
# `web` adds the confined `web_fetch` tool (the `net` enforcer). Off by default
# so the heavy reqwest/readability/DNS deps only enter a build that asks for it.
web = ["dep:agent-bridle-tool-web"]
linux-landlock = [
    "agent-bridle-core/linux-landlock",
    "agent-bridle-tool-shell?/linux-landlock",
    "agent-bridle-tool-web?/linux-landlock",
]
macos-seatbelt = [
    "agent-bridle-core/macos-seatbelt",
    "agent-bridle-tool-shell?/macos-seatbelt",
    "agent-bridle-tool-web?/macos-seatbelt",
]
windows-appcontainer = [
    "agent-bridle-core/windows-appcontainer",
    "agent-bridle-tool-shell?/windows-appcontainer",
]
# One-knob convenience (ADR 0006 D2): enable every OS L3 backend. Each is inert
# off its target OS, so a build/CI matrix can turn them all on and let
# `best_available_sandbox()` pick the right one at runtime.
os-sandbox = ["linux-landlock", "macos-seatbelt", "windows-appcontainer"]

[dependencies]
agent-bridle-core = { workspace = true }
agent-bridle-tool-shell = { workspace = true, optional = true }
agent-bridle-tool-web = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
