# Empty table detaches this draft from the agent-bridle workspace (same as
# integrations/charter-bridle): the core CI never builds it.
[workspace]

[package]
name = "charter-eval"
version = "0.0.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"
description = "Steward's Charter experiment E1a: a deterministic refusal/writ ablation against agent-bridle's real Gate. Not a workspace member; not CI-wired. Run: cargo run."

[[bin]]
name = "charter-eval"
path = "src/main.rs"

[dependencies]
agent-bridle-core = { path = "../../agent-bridle-core" }
charter-scar = { git = "https://github.com/Gilamonster-Foundation/steward-charter", rev = "84a649a399370049b15b7e4b7dc913a4858d2dba" }
charter-refusal = { git = "https://github.com/Gilamonster-Foundation/steward-charter", rev = "84a649a399370049b15b7e4b7dc913a4858d2dba" }
async-trait = "0.1"
serde_json = "1"
